# cargo-remove-unused-derives

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: check.rs  error.rs  items.rs  main.rs  patch.rs  project.rs  remove.rs  report.rs  restore.rs
tests/: integration.rs
tests/fixtures/workspace/: Cargo.toml
tests/fixtures/workspace/alpha/: Cargo.toml
tests/fixtures/workspace/alpha/src/: lib.rs  shared.rs
tests/fixtures/workspace/beta/: Cargo.toml
tests/fixtures/workspace/beta/src/: lib.rs
tests/fixtures/workspace/gamma/: Cargo.toml
tests/fixtures/workspace/gamma/src/: lib.rs
